--- a/.github/workflows/profile-stats.yml
+++ b/.github/workflows/profile-stats.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Profile Stats
       uses: teoxoy/profile-readme-stats@v1.1.0
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
     - name: Push Changes
       uses: stefanzweifel/git-auto-commit-action@v4
